--- a/tutorial_heart_rate_only.ipynb
+++ b/tutorial_heart_rate_only.ipynb
@@ -547,7 +547,7 @@
     "\n",
     "    plt.xlim([dataset.dropna()['timestamp'].iloc[0],dataset.dropna()['timestamp'].iloc[-1]])\n",
     "    start, end = ax.get_ylim()\n",
-    "    plt.savefig(f'plots/hr_{colour[:3]}_{sfilter}_tutorial.png', bbox_inches='tight', dpi=300)\n",
+    "    plt.savefig(f'plots/hr_{sfilter}_tutorial.png', bbox_inches='tight', dpi=300)\n",
     "    plt.show()"
    ]
   },
